# classifier-uncertainty

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  Makefile  README.md  hooks.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
docs/: api.md  examples.md  index.md
examples/: index.html
search/: search_index.json
src/classifier_uncertainty/: __init__.py  _classifier.py  _curves.py  _results.py  _sampler.py
tests/: test_classifier_uncertainty.py
